syntax = "proto3";

option go_package = "pingpawn.com/gotag/protos/tagger";

package tagger;

service Tagger {
  // sends back llm'd tags
  rpc TagText (UnstructuredText) returns (TagReply) {}
}

message UnstructuredText {
  string unstructured_entry = 1;
}

message TagReply {
  repeated string tags = 1;
}
